FIX nav button outline on IE11

--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -64,6 +64,8 @@ $nav__link-border-color: #484848;
     min-height: 50px;
     margin: 0 0 5px 0;
     padding: 0;
+    outline: 0;
+    border: 2px solid black;
 
     font-size: 0;
 
